fixed mobile lang percent spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2521,7 +2521,7 @@ h6 {
         min-height: 300px;
     }
     .project-des-small {
-        min-height: 200px;
+        min-height: 310px;
     }
     .project-des-med {
         min-height: 344px;
